--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <mat-drawer-container>
-          <mat-drawer mode="side" opened="true">
+          <!-- <mat-drawer mode="side" opened="true"> -->
+
+
+            <!-- in the previous case side bar was always open...now we open the sidebar based on condition -->
+            <mat-drawer mode="side" [opened]="sideBarOpen">
 
                     <app-sidenav></app-sidenav>       
             
@@ -8,7 +12,9 @@
 
           <mat-drawer-content>
 
-                    <app-header></app-header>
+                   
+                    <!-- In the header when icon is clicked sidebar should open and close -->
+                    <app-header (toggleSidebarForMe)="sidebarToggler()"></app-header>
                     <router-outlet></router-outlet>
 
           </mat-drawer-content>
