--- a/src/app/food-menu/food-menu.component.html
+++ b/src/app/food-menu/food-menu.component.html
@@ -1,1 +1,109 @@
-<p>food-menu works!</p>
+
+    <div class="modal" tabindex="-1" role="dialog"  [ngStyle]="{'display':display}">
+         <div class="modal-dialog modal-dialog-centered" role="document">
+               <div class="modal-content">
+                         <div class="modal-header">
+                           <h4 class="modal-title">Update Food Details</h4>
+                           <button type="button" class="close" aria-label="Close" (click)="onCloseHandled()" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                         </div>
+                         <div class="modal-body">
+
+
+                          <div class="  col-md-6 col-sm-4" style="margin-left: 20px;">
+                         
+                        <div class="form-group ">
+                         <label for="itemId1" style="margin-top: 5px;">Item ID</label>
+                         <input  [(ngModel)] = "itemId" (change) = "onItemIdValueChanged($event)"  type="text" name="itemId1" id="itemId1" class="form-control border border-primary">
+                        </div>
+                         <label for="itemCode1" style="margin-top: 5px;">Item Code</label>
+                         <input [(ngModel)] = "itemCode" (change) = "onItemCodeValueChanged($event)" type="text" name="itemCode1" id="itemCode1" class="form-control border border-primary">
+                         <label for="itemName1" style="margin-top: 5px;">Item Name</label>
+                         <input   [(ngModel)] = "itemName" (change) = "onItemNameValueChanged($event)" type="text" name="itemName1" id="itemName1" class="form-control border border-primary">
+                         <label  for="itemType1" style="margin-top: 5px;">Item Type</label>
+                         <input  [(ngModel)] = "itemType" (change) = "onItemTypeValueChanged($event)" type="text" name="itemType1" id="itemType1" class="form-control border border-primary">
+                         <label  for="pricePerItem1" style="margin-top: 5px;">Price Per Item</label>
+                         <input   [(ngModel)] = "pricePerItem" (change) = "onPricePerItemValueChanged($event)" type="text" name="pricePerItem1" id="pricePerItem1" class="form-control border-primary ">
+                         <label  for="totalStock1" style="margin-top: 5px;">Total Stocks</label>
+                         <input   [(ngModel)] = "totalStock" (change) = "onTotalStockValueChanged($event)" type="text" name="totalStock1" id="totalStock1" class="form-control border-primary ">
+                         <br>
+                         <!-- <button   class="btn btn-primary" (click) = "InsertCustomerData()">Add Customer</button> &nbsp;
+                         <button [disabled] = "isDisabled" (click) = "UpdateCustomerDetails()" class="btn btn-warning">Update Customer</button> -->
+                     
+                     
+                      </div>
+                          </div>
+
+
+                          <div class="modal-footer">
+                           <button type="button" class="btn btn-default" (click)="onCloseHandled()" >Close</button>
+                           <button type="button" class="btn btn-primary" (click) = "UpdateFoodItem()">Save changes</button>
+                          </div>
+
+                </div>
+          </div>
+    </div>
+
+
+<div class="container-fluid page">
+  <!-- Containerfluid is a bootstrap class that takes the entire width of the page and page her is a user defined class -->
+
+
+  <div class="d-flex page__box p-3 mt-2">Food Menu</div>
+  <!-- Use flex classes to control the layout of Bootstrap 4 components.
+   The Flexible Box Layout Module, makes it easier to design flexible responsive layout structure without using float or positioning.
+  To create a flexbox container and to transform direct children into flex items, use the d-flex class -->
+
+
+
+  <div class="page__content shadow p-3 position-relative">
+    <!-- here page__content is a user defined class  -->
+
+    <table class="table table-stripped table-hover">
+      <thead class="table-primary">
+        <tr>
+          <th scope="col">Item ID</th>
+          <th scope="col">Item Code</th>
+          <th scope="col">Item Name</th>
+          <th scope="col">Item Type</th>
+          <th scope="col">Price Per Item</th>
+          <th scope="col">Total Stock</th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr scope = "row" *ngFor = "let items of foodItemDetails">
+              <td>{{ items.ItemId }}</td>
+              <td>{{ items.ItemCode }}</td>
+              <td>{{ items.ItemName }}</td>
+              <td>{{ items.ItemType}}</td>
+              <td>{{ items.PricePerItem}} Ruppes</td>
+              <td>{{ items.TotalStock}} items</td>
+              <td>
+                <button mat-icon-button mat-list-item class="edit btn-warning" href="" (click)="openModal();GetFoodItemById(items.ItemId)" style="border-radius: 50%;width:30px ; height: 50px;padding-left: 3px;"><mat-icon>create</mat-icon></button>
+              </td>
+               <td>
+                  <a mat-list-item class="delete" (click)="DeleteFoodItem(items.ItemId)"><mat-icon>delete</mat-icon></a>
+              </td>
+              
+          </tr>
+      </tbody>
+    </table>
+
+    <div class="page__content-data position-absolute text-center">
+
+     
+   
+      
+    </div>
+
+    <!-- Modal -->
+
+  </div>
+</div>
+
+
+
+
+
+
