--- a/src/app/sell-report/sell-report.component.html
+++ b/src/app/sell-report/sell-report.component.html
@@ -1,1 +1,44 @@
-<p>sell-report works!</p>
+<div class="container-fluid page">
+    <div class="d-flex page__box p-3 mt-2">Sell Report</div>
+    <div class="page__content shadow p-3 position-relative">
+
+
+      <table class="table table-stripped table-hover">
+        <thead class="table-primary">
+          <tr>
+            <th scope="col">Order ID</th>
+            <th scope="col">Customer Name</th>
+            <th scope="col">Contact Number</th>
+            <th scope="col">Order Date</th>
+            <th scope="col">OrderAmount</th>
+        
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr scope = "row" *ngFor = "let items of sellReportDetails">
+                <td>{{ items.OrderId}}</td>
+                <td>{{ items.CustomerName}}</td>
+                <td>{{ items.ContactNumber }}</td>
+                <td>{{ items.OrderDate}}</td>
+                <td>{{ items.OrderAmount}} Ruppes</td>
+               
+                <td>
+                  <a mat-list-item class="edit"><mat-icon>create</mat-icon></a>
+                </td>
+                 <td>
+                    <a mat-list-item class="delete"><mat-icon>delete</mat-icon></a>
+                </td>
+                
+            </tr>
+        </tbody>
+      </table>
+    
+
+
+     <div class="page__content-data position-absolute text-center">
+        
+     </div>
+   </div>
+ </div>
