--- a/src/app/sidenav/sidenav.component.css
+++ b/src/app/sidenav/sidenav.component.css
@@ -96,9 +96,10 @@ border-color: white;
 }
 /* when the route is active..for the other links when hovering display this color*/
 
-.mat-subheader {
+.mat-subheader 
+{
     color: #818cf8;
     font-size: 0.6rem;
     font-weight: 100;
     letter-spacing: 1px;
-  }
+}
