--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -27,7 +27,7 @@
 
                 <!-- Define the logout component that should pop out..defined with #menu -->
                 <mat-menu #menu="matMenu">
-                  <button mat-menu-item>
+                  <button mat-menu-item routerLink="/AdminHome/Logout" routerLinkActive="list-item-active">
                     <mat-icon>exit_to_app</mat-icon>
                     Logout
                   </button>
