--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -16,10 +16,11 @@
      <!-- The property matSubheader is used to give a subheading to the link -->
 
     <!-- add the router links..here list-item-active can be used in the css for styling -->
-    <a mat-list-item routerLink="/FoodMenu" routerLinkActive="list-item-active"><mat-icon>home</mat-icon> Food Menu</a>
-    <a mat-list-item routerLink="/AddItem" routerLinkActive="list-item-active"><mat-icon>note_add</mat-icon> Add Item</a>
-    <a mat-list-item routerLink="/AddSell" routerLinkActive="list-item-active"><mat-icon>shopping_cart</mat-icon> Add Sell</a>
-    <a mat-list-item routerLink="/SellReport" routerLinkActive="list-item-active"><mat-icon>description</mat-icon> Sell Report</a>
+    <a mat-list-item routerLink="/AdminHome/FoodItem" routerLinkActive="list-item-active"><mat-icon>home</mat-icon> Food Menu</a>
+    <a mat-list-item routerLink="/AdminHome/AddItem" routerLinkActive="list-item-active"><mat-icon>note_add</mat-icon> Add Item</a>
+    <a mat-list-item routerLink="/AdminHome/AddSell" routerLinkActive="list-item-active"><mat-icon>shopping_cart</mat-icon> Add Sell</a>
+    <a mat-list-item routerLink="/AdminHome/SellReport" routerLinkActive="list-item-active"><mat-icon>description</mat-icon> Sell Report</a>
+    <a mat-list-item routerLink="/AdminHome/Logout" routerLinkActive="list-item-active"><mat-icon>exit_to_app</mat-icon> Logout</a>
     
    
 </mat-nav-list>
