Edit button of Sell Report  Done..New Component edit-report Added

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -12,8 +12,8 @@
             <select class="form-control form-select" name="fname" id="pin" [(ngModel)] = "itemType">
                     <!-- <option value="">--Please choose an option--</option> -->
                     <option value="Flat bread" >Flat bread</option>
-                    <option value="Vegetarian">Vegetarian</option>
-                    <option value="Non-Vegetarian">Non-Vegetarian</option>
+                    <option value="Vegetarian">Veg</option>
+                    <option value="Non-Vegetarian">Non-Veg</option>
                     <option value="Starters">Starters</option>
                     <option value="Mexican">Mexican </option>
                     <option value="Chinese">Chinese </option>
