--- a/src/app/sell-report/sell-report.component.html
+++ b/src/app/sell-report/sell-report.component.html
@@ -25,7 +25,7 @@
                 <td>{{ items.OrderAmount}} Ruppes</td>
                
                 <td>
-                  <a mat-list-item class="edit"><mat-icon>create</mat-icon></a>
+                  <button mat-icon-button mat-raised-button mat-list-item class="edit btn-warning" (click)="onEdit(items)" style="border-radius: 50%;width:30px ; height: 50px;padding-left: 3px;"><mat-icon>create</mat-icon></button>
                 </td>
                  <td>
                     <a mat-list-item class="delete"><mat-icon>delete</mat-icon></a>
