Add features Updated to show added successfully message

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -52,7 +52,7 @@
   
       
            
-      <button type="submit" class="btn btn-primary mt-5" style="margin-left: 350px;" (click) = "InsertFoodItemData()" routerLink="/AdminHome" routerLinkActive="list-item-active">Add Item</button>
+      <button type="submit" class="btn btn-primary mt-5" style="margin-left: 350px;" (click) = "InsertFoodItemData()" >Add Item</button>
          
        </form>
      <div class="page__content-data position-absolute text-center">
