--- a/src/app/front-end/front-end.component.html
+++ b/src/app/front-end/front-end.component.html
@@ -19,7 +19,7 @@
 <div class="content">
 <div>
 <h3>Welcomes You</h3>
-<h1>El<span> Diablo</span></h1>
+<h1 class="neon" style="font-family:'Trebuchet MS', sans-serif;">El<span > Diablo</span></h1>
 <h4 style="font-family: 'Arial Narrow Bold', sans-serif;">"Grills gone <span>Wild</span>"</h4>
 </div>
 <div class="img">
@@ -30,11 +30,10 @@
 <div class="about" >
 <div class="cont" id = "About">
 <div>
-<img src="./assets/foodeee.jpg" style="height: 600px;">
+<img src="./assets/foodeee.jpg" style="height: 550px;">
 </div>
 <div>
-<h1>About Us</h1>
-<h3>Restaurant</h3>
+<h1 class="neon2" style="margin-top: -50px;">About Us</h1>
 <p>With an enviable culinary heritage dating back to more than seven decades the <span style="color: red;">El Diablo</span> Group has set new benchmarks in the restaurant industry. The El Diablo restaurant is a true icon of America and the El Diablo restaurant in MThe Marieta Islands is one of the most popular restaurants in the Mexico. The journey began in 1939 under the visionary leadership of Sudhakar along with his partner Anil who opened the first El Diablo restaurant in Washington DC, USA. The restaurant reached its position with the third generation of management at the helm – Joe Mathew and his partner Subramanyam.
 
     After initially offering a fusion of the Arabic region's Moplah and Thiyya Cuisines, the master chefs at El Diablo have ceaselessly innovated to transform the cuisine over the years.</p> <p>The restaurants reflect the influences from different parts of the world while retaining their traditional roots. They today enjoy cult status in USA and Mexico, becoming a part of countless stories, memories and celebrations among our legion of patrons.
@@ -46,7 +45,7 @@
 </div>
 <div class="service">
 <div class="text" id = "Service">
-<h1>Our Specials</h1>
+<h1 class="neon2">Our Specials</h1>
 <div class="box">
 <div>
 <!-- <ion-icon name="person"></ion-icon> -->
@@ -68,7 +67,7 @@
 </div>
 <div class="pricing">
 <div class="price" id = "Contact">
-<h1>Contact</h1>
+<h1 class="neon2" style="font-size: 40px; font-family: Helvetica, sans-serif;">Contact</h1>
 <div class="price-box">
 <div>
 <h2>Akhil Raju</h2>
@@ -113,6 +112,8 @@
     </div>
     </div>
     </div>
+
+
 <div class="footer-fluid">
 <div class="footer">
 <p>Copyright 2021 - All Right Reserved - Made By <a href="#">El Diablo</a></p>
@@ -127,6 +128,9 @@
 </div>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+<script>
+    
+</script>
 </body>
 </html>
 
