--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -4,7 +4,8 @@
     <div class="d-flex page__box p-3 mt-2">Add Item</div>
     <div class="page__content shadow p-3 position-relative">
 
-      
+      <h3 class="text-primary">Enter Food Details</h3>
+      <hr>
       <form class="mt-5">
         <div class="form-group row mb-2">
             <label class="col-sm-2 col-form-label" for="fname">Product Type </label>
