--- a/src/app/add-sell/add-sell.component.html
+++ b/src/app/add-sell/add-sell.component.html
@@ -19,7 +19,7 @@
    <form class="form-inline">
      <label for="pro">Select product:</label>
      <select id="Food"  class="form-control form-select" name="Food" id="pro" style="width:250px; margin-right: 15px;" [(ngModel)]="Food" >
-       <option value="">--Please choose an option--</option>
+       
         
         <option *ngFor="let items of foodItemDetails;let i=index" [value]="items.ItemName" >{{items.ItemName}}</option>
         
@@ -65,12 +65,12 @@
      </tbody>
    </table>
    
-   <p style="font-weight:bold;float: right;">Total Price:{{GrandTotal}}</p>
+   <p style="font-weight:bold;font-size: 20px;font-family: Calibri, 'Trebuchet MS', sans-serif;">Total Price:{{GrandTotal}}</p>
 
+      
+   <button type="submit" class="btn btn-danger" (click)="clearOrder()" style="margin-right: 10px;">Clear Order</button>
+   <button type="submit" class="btn btn-primary" (click)="SaveOrder()">Save Order</button>
    
-   <button type="submit" class="btn btn-danger" style="float: right;margin-top: 20px;margin-left: 10px;"(click)="clearOrder()">Clear Order</button>
-   <button type="submit" class="btn btn-primary" style="float: right;margin-top: 20px; " (click)="SaveOrder()">Save Order</button>
-
     <div class="page__content-data position-absolute text-center">
     
     </div>
